[project]
name = "vlabench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"

dependencies = [
    "mujoco==3.2.2",
    "mujoco-mjx==3.2.2",
    "dm_control==1.0.22",
    "opencv-python",
    "gym==0.26.2",
    "gymnasium==0.29.1",
    "mediapy==1.2.0",
    "open3d==0.18.0",
    "numpy==1.25.0",
    "h5py==3.11.0",
    "scipy==1.14.0",
    "tensorflow-datasets==4.9.2",
    "ffmpeg-python",
    "gdown",
    "notebook",
    "openai",
    "pynput",
    "colorlog",
    "colorama",
    "peft",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VLABench"]

[tool.uv.sources]
rrt-algorithms = { git = "https://github.com/motion-planning/rrt-algorithms.git" }
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "6674e368249472c91382eb54bb8501c94c7f0c56" }